# AgentSDK

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.superpowers/sdd/: M02-T002-final-report.md  M02-T002-phase3-report.md  M02-T002-phase3a-report.md  M02-T002-phase3b-report.md  M02-T002-phase3c1-report.md  M02-T002-phase3c2-report.md  M02-T002-phase3d-plan.md  M02-T002-phase3d1-brief.md  M02-T002-phase3d1-report.md  M02-T002-phase3d2-brief.md  M02-T002-phase3d2-report.md  M02-T002-phase4-plan.md  M02-T002-phase4-review-fix-brief.md  M02-T002-phase4a-brief.md  M02-T002-phase4a-report.md  M02-T002-phase4a-review-fix-brief.md  M02-T002-phase4b-brief.md  M02-T002-phase4b-report.md  M02-T002-phase5-plan.md  M02-T002-phase5a-brief.md  M02-T002-phase5a-report.md  M02-T002-phase5b-whole-review-fix-brief.md  M02-T002-phase5b-whole-review-fix-report.md  M02-T002-phase5b1-brief.md  M02-T002-phase5b1-report.md  M02-T002-phase5b2a-brief.md  M02-T002-phase5b2a-report.md  M02-T002-phase5b2b-brief.md  M02-T002-phase5b2b-report.md  M02-T002-phase5c-brief.md  M02-T002-phase5c-report.md  M02-T002-whole-review-fix-brief.md  M02-T002-whole-review-fix-report.md  M02-T003-phase-plan.md  M02-T003-phaseA-brief.md  M02-T003-phaseA-leading-empty-variable-fix-brief.md  M02-T003-phaseA-report.md  M02-T003-phaseA-rereview-fix-brief.md  M02-T003-phaseA-review-fix-brief.md  M02-T003-phaseA-review-fix-report.md  (+63 more)
docs/design/: 00-high-level-design.md  README.md
docs/guides/: v01-quickstart.md  (+2 more)
examples/: __init__.py  quickstart_agent.py  v01_reference.py
(+277 files in other folders)
